Adjust the font size of title and subtitle Fixup the size of tone in homepage is too small problem Adjust the font size of series-font and mask-text in homepage

--- a/themes/navy/source/css/_partial/header.styl
+++ b/themes/navy/source/css/_partial/header.styl
@@ -17,7 +17,7 @@ logo-size = 50px
   display: flex
   flex-flow: row nowrap
   align-items: center
-  @media mq-mobile
+  @media mq-mobile-tablet
     justify-content: center
 
 #logo-wrap
